# pppoe-client

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  README.md  autogen.sh  configure  configure.ac  pppoe-client.spec.in
conf/: Makefile.am  Makefile.in  rfc4938.conf.in
debian/: changelog.in  control  copyright  files  pppoe-client-rfc4938.dirs  pppoe-client-rfc4938.install  pppoe-client-rfc4938.substvars  rules
demo/exp-01/: README.txt  all_informed.sh  break_links.sh  experiment.cfg
demo/node.cfg.d/: rfpipe_pppoe.cfg
demo/templates/application-host/: init.local  pppoe_server.conf
demo/templates/common/: functions
demo/templates/radio/rfpipe/: rfpipe_mac.xml
doc/diagrams/: pppoe_emane.dia
doc/sample_config/xml/rfpipe/: client_1.conf  client_2.conf  platform-modelrfpipe_01.xml  platform-modelrfpipe_02.xml  pppoe_server_setup.txt  rfpipemac.xml  rfpipenem.xml  rfpipepcr.xml
letce2-pppoe/: README  README.md
letce2-pppoe/exp-01/: Makefile  README.txt  all_informed.sh  break_links.sh  experiment.cfg
letce2-pppoe/node.cfg.d/: application-host.cfg
letce2-pppoe/templates/application-host/: init.local
letce2-pppoe/templates/common/: functions
letce2-pppoe/templates/radio/common/: init.local
letce2-pppoe/templates/radio/pppoe/: pppoe_client.conf
letce2-pppoe/templates/radio/rfpipe/: platform.xml  rfpipe_mac.xml  rfpipe_nem.xml  rfpipe_pcr.xml
scripts/: Makefile.am  Makefile.in  rfc4938clientd.in
src/: Makefile.am  Makefile.in  pppoe_types.h  rfc4938.h  rfc4938_config.c  rfc4938_debug.c  rfc4938_debug.h  rfc4938_io.c  rfc4938_messages.c  rfc4938_messages.h  rfc4938_neighbor_manager.c  rfc4938_neighbor_manager.h  rfc4938_parser.c  rfc4938_parser.h  rfc4938_transport.cc  rfc4938_transport_types.h
src/common/: logger.c  logger.h
src/ctrl/: Makefile.am  Makefile.in  rfc4938ctl.c
src/pppoe/: Makefile.am  Makefile.in  common.c  debug.c  if.c  pppoe.c  pppoe.h  pppoe_rfc4938.c  pppoe_rfc4938.h  pppoe_rfc4938_debug.c  pppoe_rfc4938_debug.h  pppoe_rfc4938_nbr.h
src/pppoe-client/: Makefile.am  pppoe_types.h  rfc4938.c  rfc4938.h  rfc4938_config.c  rfc4938_config.h  rfc4938_debug.c  rfc4938_debug.h  rfc4938_io.c  rfc4938_io.h  rfc4938_messages.c  rfc4938_messages.h  rfc4938_neighbor_manager.c  rfc4938_neighbor_manager.h  rfc4938_parser.c  rfc4938_parser.h  rfc4938_transport.cc  rfc4938_transport.h  rfc4938_transport_types.h  rfc4938_types.h  rfc4938_worker_types.h
src/pppoe-client/pppoe/: Makefile.am  common.c  debug.c  discovery.c  if.c  pppoe.c  pppoe.h  pppoe_rfc4938.c  pppoe_rfc4938.h  pppoe_rfc4938_debug.c  pppoe_rfc4938_debug.h  pppoe_rfc4938_nbr.c  pppoe_rfc4938_nbr.h
src/pppoe-server/: Makefile.am  common.c  config.h  debug.c  event.c  event.h  event_sig.c  eventpriv.h  hash.c  hash.h  if.c  logger.h  md5.c  md5.h  pppoe-server.c  pppoe-server.h  pppoe.h
src/pppoe-server/pppoe/: Makefile.am  discovery.c  ppp.c  pppoe.c
