sbin_PROGRAMS = rfc4938ctl

rfc4938ctl_CXXFLAGS =        \
 $(EMANE_CFLAGS)

rfc4938ctl_LDFLAGS = 

rfc4938ctl_SOURCES =         \
 rfc4938ctl.c                \
 ../rfc4938_messages.c       \
 ../rfc4938_debug.c

EXTRA_DIST=                  \
 ../rfc4938.h                \
 ../pppoe_types.h            \
 ../rfc4938_debug.h          \
 ../rfc4938_messages.h
