sbin_PROGRAMS = rfc4938ctl

rfc4938ctl_CXXFLAGS = \
 $(EMANE_CFLAGS)

rfc4938ctl_LDFLAGS = 

rfc4938ctl_SOURCES =                 \
 rfc4938ctl.c                        \
 ../pppoe-client/rfc4938_messages.c  \
 ../pppoe-client/rfc4938_debug.c     \
 ../common/logger.c

EXTRA_DIST=                           \
 ../pppoe-client/rfc4938.h            \
 ../pppoe-client/pppoe_types.h        \
 ../pppoe-client/rfc4938_debug.h      \
 ../pppoe-client/rfc4938_messages.h
