sbin_PROGRAMS = rfc4938pppoe

rfc4938pppoe_CXXFLAGS =

rfc4938pppoe_LDFLAGS =

rfc4938pppoe_SOURCES =      \
 ../rfc4938_messages.c      \
 common.c                   \
 debug.c                    \
 discovery.c                \
 if.c                       \
 pppoe.c                    \
 pppoe_rfc4938.c            \
 pppoe_rfc4938_debug.c      \
 pppoe_rfc4938_nbr.c

EXTRA_DIST=                 \
 ../pppoe_types.h           \
 ../rfc4938_messages.h      \
 ../rfc4938_types.h         \
 pppoe.h                    \
 pppoe_rfc4938_debug.h      \
 pppoe_rfc4938.h            \
 pppoe_rfc4938_nbr.h


